--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                 else if (data.weather[0].main == "Snow") {
                     weatherIcon.src = "img/snow.png";
                 }
+                else if (data.weather[0].main == "Rain") {
+                    weatherIcon.src = "img/rain.png";
+                }
 
 
                 //wether div displying
